# GeMaB

./: .gitmodules  README.md
gemab/: CMakeLists.txt  package.xml
gemab/scripts/: 90-gemab-usb.rules
gemab_arduino/: platformio.ini  remote_edit.sh
gemab_arduino/include/: BaseController.h  MotorDriver.h  PID.h
gemab_arduino/lib/ros_lib/: ros.h
gemab_arduino/src/: BaseController.cpp  MainController.cpp  MotorDriver.cpp  PID.cpp
gemab_bringup/: CMakeLists.txt  package.xml
gemab_bringup/launch/: gemab_base.launch  gemab_lidar.launch  gemab_remote.launch  gemab_robot.launch
gemab_description/: CMakeLists.txt  package.xml
gemab_description/urdf/: gemab.urdf
gemab_navigation/: CMakeLists.txt  Makefile  package.xml  readme.md  test.json
gemab_navigation/include/: room_manager.h
gemab_navigation/src/: room_detector.cpp  room_detector_node.cpp  room_manager.cpp
gemab_slam/: CMakeLists.txt  package.xml
gemab_teleop/: CMakeLists.txt  package.xml
gemab_teleop/launch/: gemab_teleop_key.launch
gemab_teleop/nodes/: gemab_teleop_key  gemab_teleop_key.py
